Fixed Thumbnails. Will now cover the entire iframe. Fixed overlap of photos and background colors. Made the skin variable apply across pages. Fixed setBackgroundPhoto page.

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -48,19 +48,20 @@ a:active {
 }
 
 #header a {
-  color:white;
+  color:black;
 }
 
 
 #logo {
-  color: #ffffff
+  color: white
   padding: 0px 10px 0px 20px;
 }
 
 .logo {
+ /** Company's logo/identity should NOT be customizable **/
   font-weight: bold;
   font-family: helvetica
-  font-size: 20px; /** i dont think a company's logo/identity should be customizable **/
+  font-size: 30px;
 }
 
 
@@ -106,10 +107,11 @@ padding: 0px;
 	color: white;
 	background-color:black;
 	padding-left: 0px;	
-  background-image: url('/public/images/headerBG.png'); /*Little spiffier header bar */
+  background-image: url(${skin.get("headerBGPhoto")}); /*Little spiffier header bar */
   background-repeat: repeat-x;
+  background-color: #${skin.get("headerBGColor")};
   
-  	border-color: #CCCCCC; /*Forced to use a border here, because encasing everything in a div will ruin alignment (div within div padding) */ 
+  border-color: #CCCCCC; /*Forced to use a border here, because encasing everything in a div will ruin alignment (div within div padding) */ 
 	border-top-style: solid;
 	border-left-style: solid;
 	border-right-style: solid;
@@ -128,7 +130,7 @@ padding: 0px;
 	height: auto;
 	padding: 0px;
 
-border-color: #CCCCCC; /*Forced to use a border here, because encasing everything in a div will ruin alignment (div within div padding) */ 
+  border-color: #CCCCCC; /*Forced to use a border here, because encasing everything in a div will ruin alignment (div within div padding) */ 
 	border-left-style: solid;
 	border-bottom-style: solid;
 	border-right-style: solid;
@@ -205,23 +207,25 @@ height: 80%; /*Resize the profile-picture here, picture will take up all the spa
 
 /** Shared UI Elements **/
 .ui_TextArea {
-width: 100%;
-resize: none;
-color:grey;
-border: none;
-margin: none;
-display: none;
+  width: 100%;
+  resize: none;
+  color:grey;
+  border: none;
+  margin: none;
+  display: none;
 }
 
 .ui_TextAreaButton {
-width: 100%;
-height: 30px;
-margin: none;
-border: none;
-padding: none;
-background-color: #e76509;
-color: white;
-display:none;
+  width: 100%;
+  height: 30px;
+  margin: none;
+  border: none;
+  padding: none;
+  background-image: url(${skin.get("headerBGPhoto")}); /*Little spiffier header bar */
+  background-repeat: repeat-x;
+  background-color: #${skin.get("headerBGColor")};
+  color: white;
+  display:none;
 }
 
 .ui_TextBox {
